@@ -704,10 +704,12 @@
                                     <selection>0</selection>
                                     <content>
                                         <item tooltip="Powerful radio station" helptext="This station is for amateurs of hard rock and heavy metal">Power 108</item>
+                                        <item tooltip="Disabled radio station" enabled="0">Power 0</item>
                                         <item tooltip="">WMMS 100.7</item>
                                         <item tooltip="E=mc^2">Energy 98.3</item>
                                         <item helptext="Favourite chukcha's radio">CHUM FM</item>
                                         <item>92FM</item>
+                                        <item hidden="1">Very quite station</item>
                                     </content>
                                 </object>
                             </object>
